# wsl-repository

./: .gitignore  Makefile  README.md
.git-old/: COMMIT_EDITMSG  config  index  packed-refs
Algorithms/: AlgorithmTests  AlgorithmTests.cpp  DijkstraPathFind  DijkstraPathFind.cpp  Huffman.cpp  Makefile  PriorityQueueHeapImpl  PriorityQueueHeapImpl.cpp
Algorithms/BubbleSort/: BubbleSort.cpp  BubbleSort.h
Algorithms/Queue/: Queue.cpp
Algorithms/Stack/: Makefile  Stack.cpp  main.cpp
Algorithms/Trees/: BinaryTree.cpp  BinaryTree.h  Heap.cc  Utilities.h
C/DataStructures/: Signal.c
C/KernelModule/: lkm_example.c
C/Linkage/: Defs.c  Main.c  Makefile
C/MemManagement/: MMAP.c  MMAPPhysical.txt
C/MultiThreading/: Makefile  PThreads.c  PThreads.h
C/Wrappers/: MallocWrapper.c  main.c
ChatGPT/: ChatGPT3Client-cpprest.cc  ChatGPT3Client-curl.cc
Cpp11/: SmartPointers.cc  SmartPointersImpl.h  VariadicTemplate.cc
Cpp11/References/: VariadicTempalte.cppinsights.io.cpp
CppPythonBindingViaBoost/: CMakeLists.txt
CppPythonBindingViaBoost/ExposingClasses/: classes.cpp
CppPythonBindingViaBoost/HelloWorld/: Hello.cpp  Hello.py
CxxTests/: CxxTest1Suite.h  CxxTest3Runner  CxxTest3Runner.cc  CxxTest3Suite.h  CxxTest4Runner.cc  CxxTest4Suite.h  CxxTestRunner  CxxTestRunner.cpp  CxxTestSuite1.cpp  CxxTestSuite1Runner  CxxTestSuite2.cpp  CxxTestSuite2.h  CxxTestSuite2Runner  CxxTestSuite3.cpp  CxxTestSuite3.h  CxxTestSuite3Runner  launch.json
DSA/Algorithms/: AlgorithmGoogleTests.cpp  Algorithms.h  Makefile  grid.txt
DesignPatterns/: .depend  DesignPatternTest  DesignPatternTest.cc  Makefile  SingletonT.h
DesignPatterns/Singleton/: SingletonT.h
HackerRank/AttrParser/: HRMLParser.cpp
IPC/SharedMemory/: SharedMemory.cc  SharedMemory2.cc
IPC/SocketProgramming/: Makefile  SckServer.c  SimpleClientServer.cc  SocketClient.cc  SocketClient.h  SocketServer.cc  SocketServer.h
IPC/SocketProgramming2/: Makefile  SocketClient.cc  SocketServer.cc
LinuxDev/: ConstructorTests.cpp  Helper.h  LinuxDev.sln  LinuxDev.vcxproj  Makefile  PThreadTests.cpp  README  SampleMakeFile  ThreadTests.cpp  VariadicTemplateTests.cpp  WSLTestNoStartFiles  WSLTestNormal  main  main.cpp  mainOrg.cpp  main_nostartfiles.cpp
LinuxDev/ThreadPool/: Makefile  (+1 more)
Misc/: CountCharsInWord.c  HappyNumber.c  InitializerList.cc  LinkedListAltDeleteFromPos.cc  ReverseBits.c  StringUtils.cpp
MultiThreading/: SemaphoreTest.cc
Notes/: README.md
Python/: StringReverse.py  Test.ipynb
RandomTests/: SmartPointers.cpp
SocketProgramming/: SocketClient  SocketServer  SocketServer.cc
ThreadPool/: Makefile  ThreadPool  ThreadPool.cbp
Utilities/: Semaphore.h  Utils.h
gtest/: README.md  gtest.sln
(+76 files in other folders)
